@@ -36,6 +36,8 @@ Version 1.6.3
        for changes. (Stefan)
 - BUG: An incomplete info text was shown for tree conflicts 
        "incoming add upon merge". (Stefan)
+- BUG: The status cache exclude list wasn't used the first five minutes
+       after a restart. (Stefan)
 
 Version 1.6.2
 - BUG: Error message about non-LF commit messages when using messages with
